# claude-code-transcripts

./: .gitignore  AGENTS.md  PR.md  README.md  SERVER.md  alembic.ini  pyproject.toml
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 9f626c3218c2_initial_migration.py
specs/001-display-readable-context-output/: plan.md
specs/001-display-readable-context-output/examples/: context-index-with-parsed.html  sample-context-session.json
src/claude_code_publish/: __init__.py
src/claude_code_transcripts/: __init__.py  code_view.py  config.py  models.py  server.py  sync.py
src/claude_code_transcripts/templates/: base.html  code.html  code_view.html  code_view.js  index.html  macros.html  main.js  master_index_unified.html  page.html  project_index_unified.html  search.js  styles.css  unified.html
tests/: sample_antigravity_export.json  sample_codex_session.jsonl  sample_kiro_export.json  sample_windsurf_export.json  test_all.py  test_ansi_rendering.py  test_batch.py  test_code_view.py  test_code_view_e2e.py  test_codex_cli_finder.py  test_codex_format.py  test_config.py  test_generate_html.py  test_models.py  test_new_ui.py  test_s3_url.py  test_sync.py  test_watch.py  test_windsurf_format.py
tests/__snapshots__/test_generate_html/: TestGenerateHtml.test_generates_index_html.html  TestGenerateHtml.test_generates_page_001_html.html  TestGenerateHtml.test_generates_page_002_html.html  TestParseSessionFile.test_codex_jsonl_generates_html.html  TestParseSessionFile.test_jsonl_generates_html.html  TestRenderContentBlock.test_image_block.html  (+12 more)
(+1 files in other folders)
